index finished but with whie areas and bugs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 <title>Celebratory | Home :: House of Celebration </title>
-<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+
+	<link href="css/font-awesome.min.css" rel="stylesheet"  type="text/css" media="all">
+	<link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
+
+	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,7 +80,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <ul>
         <li><a href="#" class="entypo-facebook" target="_blank"><span>Facebook</span></a></li>
         <li><a href="#" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
-        <li><a href="#" class="entypo-gplus" target="_blank"><span>Google+</span></a></li>
+        <li><a href="#" class="entypo-play" target="_blank"><span>Youtube</span></a></li>
         <li><a href="#" class="entypo-linkedin" target="_blank"><span>LinkedIn</span></a></li>
         <li><a href="#" class="entypo-instagrem" target="_blank"><span>Instagram</span></a></li>
         <li><a href="#" class="entypo-stumbleupon" target="_blank"><span>StumbleUpon</span></a></li>
@@ -136,17 +140,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="qe">
 		<div class="container">
 
-				<div class="col-md6">
+				<div class="col-md-6">
 
-					<h4>Celebratory Quality</h4>
+					<h4>CELEBRATORY QUALITY</h4>
 
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
 
 				</div>
-				<div class="col-md6">
+				<div class="col-md-6">
 
-						<h4>Celebratory experience</h4>
+						<h4>CELEBRATORY EXPERIENCE</h4>
 
 
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
@@ -156,114 +160,39 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!--//qe-->
-	<!--special-->
-	<div class="special"> 
-		<div class="container">			
-			<div class="col-md-7 special-grids">
-				<h3 class="title">What we do</h3>
-				<div class="embed-responsive embed-responsive-16by9">
-					<iframe src="https://www.youtube.com/embed/rKa11TYMpmY" allowfullscreen></iframe>
-				</div>
-			</div>
-			<div class="col-md-5 special-grids">
-				<h3 class="title">Our specialization</h3>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
-				<h6>Our facilities</h6>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-						60%
-					</div>
-				</div>
-				<h6>Experienced staff</h6>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-						80%
-					</div>
-				</div>
-				<h6>Free consultations</h6>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-						90%
-					</div>
-				</div>
-				<h6>Advanced lab tests</h6>
-				<div class="progress">
-					<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-						75%
-					</div>
-				</div>
-			</div>	
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-	<!--//special-->
+
 	<!-- footer-->
 	<div class="footer">
 		<div class="container">
 			<div class="footer-grids">
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Flickr Posts</h3>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/7.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/8.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/9.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="clearfix"> </div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/9.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/7.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/8.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Recent Posts</h3>
-					<ul>
-						<li><a href="#">Vestibulum felis</a></li>
-						<li><a href="#">Mauris at tellus</a></li>
-						<li><a href="#">Donec ut lectus</a></li>
-						<li><a href="#">vitae interdum</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Useful Info</h3>
-					<ul>
-						<li><a href="#">Hendrerit quam</a></li>
-						<li><a href="#">Amet consectetur </a></li>
-						<li><a href="#">Iquam hendrerit</a></li>
-						<li><a href="#">Donec ut lectus </a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Contact Us</h3>
-					<p>Pelleesque conquat dignissim lacus quis altrcies.</p>
+				<div class="col-md-4 footer-grid ">
+					<h3 class="title">CONTACTS</h3>
+
+					<p><i class="fa fa-map-marker"></i> Pelleesque conquat dignissim lacus quis altrcies.</p>
 					<div class="footer-grid-address">
-						<p>Tel : 800-255-9999</p>
-						<p>Fax : 1234 568</p>
-						<p>Email : <a class="email-link" href="mailto:example@mail.com">mail@example.com</a></p>						
+						<p><i class="fa fa-mobile"></i> : 800-255-9999</p>
+						<p> <i class="fa fa-mobile"></i> : 1234 568</p>
+						<p><i class="fa fa-envelope"></i> : <a class="email-link" href="mailto:example@mail.com">mail@example.com</a></p>
 					</div>
+					<div class="clearfix"> </div>
 				</div>
-				<div class="clearfix"> </div>
+				<div class="col-md-4 footer-grid ">
+					<h3 class="title">STAY CONNECTED</h3>
+					<ul class="fa-social">
+						<li><a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="http://instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+						<li><a href="http://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://youtube.com/" target="_blank"><i class="fa fa-youtube"></i> </a></li>
+						<li><a href="intent://send/01005399170#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><i class="fa fa-whatsapp"></i> </a></li>
+					</ul>
+				</div>
+				<div class="col-md-4 footer-grid">
+					<h3 class="title">SIGN UP FOR OUR EMAIL UPDATES</h3>
+					<ul>
+
+					</ul>
+				</div>
+
 			</div>
 		</div>
 	</div>
