fonts , team , projects

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <html><head>
-    <title>Celebratory | Team :: House of Celebration</title>
+    <title>Celebratory | Home :: House of Celebration</title>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
@@ -34,7 +34,7 @@
     <!--//end-smoth-scrolling-->
     <link rel="stylesheet" href="css\style.css"></head><body>
 <!--banner-->
-<div >
+<div class="banner">
     <!--header-->
     <div class="top-nav">
         <nav class="navbar navbar-default">
@@ -113,106 +113,3 @@
             </li>
         </ul>
     </aside>
-    <!--Start Team DIV -->
-    <div class="cel-team">
-        <!--START TEAM CONTAINER -->
-        <div class="container">
-            <!--START TEAM TITLE -->
-            <div class="cel-team-title">
-                <h4>CELEBRATORY TEAM</h4>
-            </div><!--END TEAM TITLE -->
-            <div class="cel-team-info">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-            </div><!--END TEAM INFO -->
-            <div class="cel-team-img">
-                <img src="img/team/Celebratory-Team_03.jpg" class="img img-responsive">
-            </div>
-        </div><!-- -->
-    </div><!-- -->
-
-
-<!-- footer-->
-<div class="footer">
-    <div class="container">
-        <div class="footer-grids">
-            <div class="col-md-4 footer-grid ">
-                <h5 class="title">CONTACTS</h5>
-                <p>
-                    <i class="fa fa-map-marker"></i>Pelleesque conquat dignissim lacus quis altrcies.</p>
-                <div class="footer-grid-address">
-                    <p>
-                        <i class="fa fa-mobile"></i>: 800-255-9999</p>
-                    <p>
-                        <i class="fa fa-mobile"></i>: 1234 568</p>
-                    <p>
-                        <i class="fa fa-envelope"></i>:
-                        <a class="email-link" href="mailto:example@mail.com">mail@example.com</a>
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="col-md-4 footer-grid text-center">
-                <h5 class="title">STAY CONNECTED</h5>
-                <ul class="fa-social">
-                    <li>
-                        <a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="http://instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="http://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li>
-                        <a href="http://youtube.com/" target="_blank"><i class="fa fa-youtube"></i> </a>
-                    </li>
-                    <li>
-                        <a href="intent://send/01005399170#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><i class="fa fa-whatsapp"></i> </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-4 footer-grid">
-                <h5 class="title">SIGN UP FOR OUR EMAIL UPDATES</h5>
-                <ul></ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="clear"></div>
-<div class="copy-right">
-    <div class="container">
-        <p>© 2015
-            <a href="index.html">Celebratory</a>. All rights reserved | Design by
-            <a href="http://rootcave.com">Root Cave </a>
-        </p>
-    </div>
-</div>
-<!--//footer-->
-<!--smooth-scrolling-of-move-up-->
-<script type="text/javascript">
-    $(document).ready(function() {
-        /*
-         var defaults = {
-         containerID: 'toTop', // fading element id
-         containerHoverID: 'toTopHover', // fading element hover id
-         scrollSpeed: 1200,
-         easingType: 'linear'
-         };
-         */
-
-        $().UItoTop({ easingType: 'easeOutQuart' });
-
-    });
-</script>
-<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-<!--//smooth-scrolling-of-move-up-->
-<!-- Bootstrap core JavaScript==================================================-
-->
-
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="js/bootstrap.js"></script>
-
-
-</div></body></html>
