team page finished without styling

--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
-                        <li class="hvr-bounce-to-bottom active">
+                        <li class="hvr-bounce-to-bottom ">
                             <a href="index.html">Home</a>
                         </li>
                         <li class="hvr-bounce-to-bottom">
@@ -65,7 +65,7 @@
                         <li class="hvr-bounce-to-bottom">
                             <a href="service.html">Service</a>
                         </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom active">
                             <a href="team.html">Team</a>
                         </li>
                         <li class="hvr-bounce-to-bottom">
@@ -126,11 +126,171 @@
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
             </div><!--END TEAM INFO -->
+           <!--START CEL TEAM IMG -->
             <div class="cel-team-img">
                 <img src="img/team/Celebratory-Team_03.jpg" class="img img-responsive">
-            </div>
-        </div><!-- -->
-    </div><!-- -->
+            </div> <!--END CEL TEAM IMG -->
+<!-- START TEAM MEMBER BIG TITLE : THE OWNERS , THE DESIGNERS -->
+            <div class="row cel-member-big-title" >
+                <h4>THE FOUNDERS</h4>
+            </div><!-- END TEAM MEMBER BIG TITLE : THE OWNERS , THE DESIGNERS -->
+            <!-- START TEAM MEMBER AMR SAMY OR RAMY -->
+                <div class="row cel-member">
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                 <div class="col-md-3 cel-member-info">
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <div class="member-name">
+                    <h4>AMR</h4>
+                     </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                        <div class="member-title">
+                            <h4>CREATIVE DIRECTOR</h4>
+                        </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                        <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                        <div class="member-desc">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                <!--START TEAM MEMBER IMAGE -->
+                <div class="col-md-3 cel-member-img">
+                    <img src="img/team/amr.jpg" class="img img-responsive">
+                </div> <!--END TEAM MEMBER IMAGE -->
+
+
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                    <div class="col-md-3 cel-member-info">
+                        <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                        <div class="member-name">
+                            <h4>RAMY</h4>
+                        </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                        <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                        <div class="member-title">
+                            <h4>EVENT CONSULTANT</h4>
+                        </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                        <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                        <div class="member-desc">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                    </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                    <!--START TEAM MEMBER IMAGE -->
+                    <div class="col-md-3 cel-member-img">
+                        <img src="img/team/rami.jpg" class="img img-responsive">
+                    </div> <!--END TEAM MEMBER IMAGE -->
+
+
+
+
+                    </div><!-- END TWO TEAM MEMBER AMR SAMY OR RAMY -->
+
+
+            <!-- START TEAM MEMBER BIG TITLE : THE OWNERS , THE DESIGNERS -->
+            <div class="row cel-member-big-title" >
+                <h4>TOP MANAGEMENT</h4>
+            </div><!-- END TEAM MEMBER BIG TITLE : THE OWNERS , THE DESIGNERS -->
+            <!-- START TEAM MEMBER AMR SAMY OR RAMY -->
+            <div class="row cel-member">
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                <div class="col-md-3 cel-member-info">
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <div class="member-name">
+                        <h4>AWAD</h4>
+                    </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                    <div class="member-title">
+                        <h4>PRODUCTION MANAGER</h4>
+                    </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                    <div class="member-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                <!--START TEAM MEMBER IMAGE -->
+                <div class="col-md-3 cel-member-img">
+                    <img src="img/team/awaad.jpg" class="img img-responsive">
+                </div> <!--END TEAM MEMBER IMAGE -->
+
+
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                <div class="col-md-3 cel-member-info">
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <div class="member-name">
+                        <h4>NOUR</h4>
+                    </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                    <div class="member-title">
+                        <h4>ART DIRECTOR</h4>
+                    </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                    <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                    <div class="member-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+                <!--START TEAM MEMBER IMAGE -->
+                <div class="col-md-3 cel-member-img">
+                    <img src="img/team/nour.jpg" class="img img-responsive">
+                </div> <!--END TEAM MEMBER IMAGE -->
+
+
+
+
+            </div><!-- END TWO TEAM MEMBER AMR SAMY OR RAMY -->
+
+            <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+            <div class="col-md-3 cel-member-info">
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                <div class="member-name">
+                    <h4>ANAN</h4>
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                <div class="member-title">
+                    <h4>PRODUCTION MANAGER</h4>
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                <div class="member-desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+            </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+            <!--START TEAM MEMBER IMAGE -->
+            <div class="col-md-3 cel-member-img">
+                <img src="img/team/anan.jpg" class="img img-responsive">
+            </div> <!--END TEAM MEMBER IMAGE -->
+
+
+            <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+            <div class="col-md-3 cel-member-info">
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                <div class="member-name">
+                    <h4>MINA</h4>
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                <div class="member-title">
+                    <h4>ART DIRECTOR</h4>
+                </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (TITLE) -->
+                <!-- START TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+                <div class="member-desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div> <!-- END TEAM MEMBER AMR SAMY OR RAMY (DESC) -->
+            </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
+            <!--START TEAM MEMBER IMAGE -->
+            <div class="col-md-3 cel-member-img">
+                <img src="img/team/mina.jpg" class="img img-responsive">
+            </div> <!--END TEAM MEMBER IMAGE -->
+
+
+
+
+        </div><!-- END TWO TEAM MEMBER AMR SAMY OR RAMY -->
+
+            </div><!-- END CONTAINER -->
+
+
+        </div><!--END CEL TEAM  -->
 
 
 <!-- footer-->
