--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </div>
                         <!--Header Image -->
                         <div class="col-md-6 col-sm-12" >
-                            <img src="img/home/c-icon.png" class="header-img img-responsive">
+                            <img src="img/home/icon.png" class="header-img img-responsive">
                         </div>
                     </div>
                     <!--//End-slider-script-->
