--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <html><head>
-    <title>Celebratory | Home :: House of Celebration</title>
+    <title>Celebratory | Projects :: House of Celebration</title>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
