added service page

--- a/hiring.html
+++ b/hiring.html
@@ -62,7 +62,7 @@
                         <a href="projects.html">Projects</a>
                     </li>
                         <li class="hvr-bounce-to-bottom">
-                            <a href="service.html">Service</a>
+                            <a href="services.html">Service</a>
                         </li>
                         <li class="hvr-bounce-to-bottom">
                             <a href="team.html">Team</a>
