--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="hvr-bounce-to-bottom">
-                                    <a href="about.html">About</a>
+                                    <a href="#about">About</a>
                                 </li><li class="hvr-bounce-to-bottom">
                                     <a href="projects.html">Projects</a>
                                 </li>
                                 <li class="hvr-bounce-to-bottom">
-                                    <a href="service.html">Service</a>
+                                    <a href="services.html">Service</a>
                                 </li>
                                 <li class="hvr-bounce-to-bottom">
                                     <a href="team.html">Team</a>
@@ -132,7 +132,7 @@
             </div>
             <!--//banner-->
             <!-- welcome -->
-            <div class="welcome">
+            <div class="welcome" id="about">
                 <!-- container -->
                 <div class="container">
                     <div class="welcome-info">
