every details are finished but need a lot of tweaks

--- a/services.html
+++ b/services.html
@@ -32,7 +32,8 @@
         });
     </script>
     <!--//end-smoth-scrolling-->
-    <link rel="stylesheet" href="css\style.css"></head><body>
+    <link rel="stylesheet" href="css\style.css"></head>
+<body class="bg-body">
 <!--banner-->
 <div >
     <!--header-->
@@ -115,8 +116,7 @@
     </aside>
     <!-- START Services DIV-->
     <div class="services">
-    <!--Start Container Fluid-->
-    <div class="container-fluid">
+
         <!-- ROW-->
         <div class="row">
             <!-- Service Page Title-->
@@ -129,8 +129,12 @@
     </div><!--End Service Page Subtitle-->
     <!-- Service TOMORROWLAND -->
     <div class="service-tomorrowland col-md-12">
+        <!--Start Container -->
+        <div class="container">
         <div class="service-caption"> TOMORROWlAND</div>
+
     </div><!-- End Service TOMORROWLAND -->
+        </div><!--END Container
             <!-- Service GADSBY -->
             <div class="service-gadsby col-md-6">
                 <div class="service-caption">THE GREAT GADSBY</div>
@@ -151,19 +155,19 @@
                 <div class="service-caption">THE GREAT GADSBY</div>
             </div><!-- END Service GADSBY2 -->
             <!-- Service CARIBIANS2 -->
-            <div class="service-pirates2 col-md-6">
+            <div class="service-caribians2 col-md-6">
                 <div class="service-caption">PIRATES OF THE CARIBIANS</div>
             </div><!-- END Service CARIBIANS2 -->
 
             </div><!-- END ROW-->
-    </div><!--End Container -->
+
     </div><!-- END Services DIV-->
     <!-- footer-->
     <div class="footer">
         <div class="container">
             <div class="footer-grids">
-                <div class="col-md-4 footer-grid ">
-                    <h5 class="title">CONTACTS</h5>
+                <div class="col-md-6 footer-grid ">
+                    <h3 class="title">CONTACTS</h3>
                     <p>
                         <i class="fa fa-map-marker"></i>Pelleesque conquat dignissim lacus quis altrcies.</p>
                     <div class="footer-grid-address">
@@ -178,8 +182,8 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <div class="col-md-4 footer-grid text-center">
-                    <h5 class="title">STAY CONNECTED</h5>
+                <div class="col-md-6 footer-grid text-center">
+                    <h3 class="title">STAY CONNECTED</h3>
                     <ul class="fa-social">
                         <li>
                             <a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -198,10 +202,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4 footer-grid">
-                    <h5 class="title">SIGN UP FOR OUR EMAIL UPDATES</h5>
-                    <ul></ul>
-                </div>
+
             </div>
         </div>
     </div>
