--- a/team.html
+++ b/team.html
@@ -32,7 +32,8 @@
         });
     </script>
     <!--//end-smoth-scrolling-->
-    <link rel="stylesheet" href="css\style.css"></head><body>
+    <link rel="stylesheet" href="css\style.css"></head>
+<body class="bg-body">
 <!--banner-->
 <div >
     <!--header-->
@@ -295,13 +296,12 @@
 
         </div><!--END CEL TEAM  -->
 
-
 <!-- footer-->
 <div class="footer">
     <div class="container">
         <div class="footer-grids">
-            <div class="col-md-4 footer-grid ">
-                <h5 class="title">CONTACTS</h5>
+            <div class="col-md-6 footer-grid ">
+                <h3 class="title">CONTACTS</h3>
                 <p>
                     <i class="fa fa-map-marker"></i>Pelleesque conquat dignissim lacus quis altrcies.</p>
                 <div class="footer-grid-address">
@@ -316,8 +316,8 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="col-md-4 footer-grid text-center">
-                <h5 class="title">STAY CONNECTED</h5>
+            <div class="col-md-6 footer-grid text-center">
+                <h3 class="title">STAY CONNECTED</h3>
                 <ul class="fa-social">
                     <li>
                         <a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -336,10 +336,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-4 footer-grid">
-                <h5 class="title">SIGN UP FOR OUR EMAIL UPDATES</h5>
-                <ul></ul>
-            </div>
+
         </div>
     </div>
 </div>
