refactored index page -footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <!-- Custom Theme files -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="keywords" content="Framer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+        <meta name="keywords" content="Celebratory House of Celebration, Celebratory, Prom Events in Egypt, Prom Events Planner in Egypt,
 
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design">
+	Wedding Planners in Egypt, Prom, Schools Events">
         <script type="application/x-javascript">
             addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
         </script>
@@ -120,7 +120,7 @@
                     <div class="row">
                         <!--Header Text -->
                         <div class="col-md-6 col-sm-12">
-                            <h3 class="text-center">YOUR TEXT HERE</h3>
+                            <h3 class="text-center header-text">YOUR TEXT HERE</h3>
                         </div>
                         <!--Header Image -->
                         <div class="col-md-6 col-sm-12" >
