--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <p>
                                     <i class="fa fa-mobile"></i>: 800-255-9999</p>
                                 <p>
-                                    <i class="fa fa-mobile"></i>: 1234 568</p>
+                                    <i class="fa fa-phone"></i>: 1234 568</p>
                                 <p>
                                     <i class="fa fa-envelope"></i>:
                                     <a class="email-link" href="mailto:example@mail.com">mail@example.com</a>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="col-md-6 footer-grid text-center">
                             <h3 class="title">STAY CONNECTED</h3>
-                            <ul class="fa-social">
+                            <ul class="">
                                 <li>
                                     <a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
                                 </li>
@@ -223,7 +223,7 @@
                                     <a href="http://youtube.com/" target="_blank"><i class="fa fa-youtube"></i> </a>
                                 </li>
                                 <li>
-                                    <a href="intent://send/01005399170#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><i class="fa fa-whatsapp"></i> </a>
+                                    <a href="intent://send9/01005399170#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><i class="fa fa-whatsapp"></i> </a>
                                 </li>
                             </ul>
                         </div>
@@ -234,7 +234,7 @@
             <div class="clear"></div>
             <div class="copy-right">
                 <div class="container">
-                    <p>© 2015
+                    <p>© 2016
                         <a href="index.html">Celebratory</a>. All rights reserved | Design by
                         <a href="http://rootcave.com">Root Cave </a>
                     </p>
