tweaked portfolio page and solved about from other pages

--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="hvr-bounce-to-bottom">
-                            <a href="about.html">About</a>
+                            <a href="index.html#about">About</a>
                         </li><li class="hvr-bounce-to-bottom">
                         <a href="projects.html">Projects</a>
                     </li>
