--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="hvr-bounce-to-bottom">
-                            <a href="about.html">About</a>
+                            <a href="index.html#about">About</a>
                         </li><li class="hvr-bounce-to-bottom">
                         <a href="projects.html">Projects</a>
                     </li>
@@ -120,7 +120,7 @@
         <div class="container">
             <!--START TEAM TITLE -->
             <div class="cel-team-title">
-                <h4>CELEBRATORY TEAM</h4>
+                <h3 class="title">CELEBRATORY TEAM</h3>
             </div><!--END TEAM TITLE -->
             <div class="cel-team-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
