--- a/projects.html
+++ b/projects.html
@@ -34,12 +34,12 @@
         });
     </script>
     <!--//end-smoth-scrolling-->
-    </head><body>
+    </head><body class="bg-body">
 <!--banner-->
 <div >
     <!--header-->
-    <div class="top-nav">
-        <nav class="navbar navbar-default">
+    <div class="top-nav ">
+        <nav class="navbar navbar-default ">
             <div class="container">
                 <span></span>
                 <div class="navbar-header navbar-left">
@@ -56,24 +56,24 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
-                        <li class="hvr-bounce-to-bottom ">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="index.html">Home</a>
                         </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="about.html">About</a>
-                        </li><li class="hvr-bounce-to-bottom active">
+                        </li><li class="hvr-bounce-to-bottom bg-body active">
                         <a href="projects.html">Projects</a>
                     </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="services.html">Service</a>
                         </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="team.html">Team</a>
                         </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="hiring.html">Hiring</a>
                         </li>
-                        <li class="hvr-bounce-to-bottom">
+                        <li class="hvr-bounce-to-bottom bg-body">
                             <a href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -127,7 +127,7 @@
 
             <!-- Title -->
             <div class="section-title">
-                <h2>Portfolio</h2>
+                <h3 class="title">Our Projects</h3>
             </div>
             <!--/Title -->
 
@@ -163,15 +163,17 @@
             </div>
             <!--/Portfolio Filters -->
 
+            <!--Portfolio items container -->
+            <div class="container">
             <!-- Portfolio Wrapper -->
             <div class="isotope fadeInLeft animated wow" style="position: relative; overflow: hidden; height: 480px;" id="portfolio_wrapper">
 
                 <!-- Portfolio Item -->
                 <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   appleIOS isotope-item">
-                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic1.jpg"  alt="Portfolio 1"> </div>
+                    <div class="portfolio_img bx-next"> <img src="img/projects/portfolio_pic1.jpg"  alt="Portfolio 1"> </div>
                     <div class="item_overlay">
-                        <a href="img/projects/portfolio_pic1.jpg" class="item_info fancybox">
-                            <h4 class="project_name">SMS Mobile App</h4>
+                        <a href="img/projects/portfolio_pic1.jpg" class="item_info fancybox  ">
+                            <h4 class="project_name zoom-icon"></h4>
                         </a>
                     </div>
                 </div>
@@ -268,7 +270,7 @@
             <div class="clear"></div>
             <div id="project_data"></div>
         </div>
-
+</div><!-- End Portfolio Items Container -->
 
     </section>
     <!--/Portfolio -->
@@ -354,7 +356,6 @@
     <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
     <script type="text/javascript" src="js/jquery.nav.js"></script>
-    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/jquery.isotope.js"></script>
     <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/wow.js"></script>
